# NeuroAgroV2.0

./: .env  .env.example  .gitignore  APPLICATION_STRUCTURE.md  PIN_DIAGRAM.md  README.md  app_iot.py  disease_ml.py  models.py  package.json  pyproject.toml  render.yaml  requirements-vercel.txt  requirements.txt  run_iot.py  sensor_agent.py  supabase_bridge.py  supabase_schema.sql  vercel.json  weather_agent.py
disease_service/: .env.example  README.md  app.py  requirements.txt
disease_service/.yolo_config/: persistent_cache.json  settings.json
esp32_firmware/: camera_ov6767_upload.ino  main.ino
frontend_jsx/: .env.example  index.html  package-lock.json  package.json
frontend_jsx/src/: App.jsx  styles.css
routes/: api.py
scripts/: dev-final.mjs  dev-fixed.mjs  dev.mjs
