[project]
name = "nuroagro"
version = "1.0.0"
description = "NuroAgro Flask and React smart agriculture application"
requires-python = ">=3.10,<3.12"
dependencies = [
  "Flask==2.3.3",
  "Flask-CORS==4.0.0",
  "Flask-SQLAlchemy==3.0.5",
  "Flask-Session==0.5.0",
  "python-dotenv==1.0.0",
  "SQLAlchemy==2.0.20",
  "Werkzeug==2.3.7",
  "requests==2.31.0",
  "joblib==1.3.2",
  "numpy==1.24.3",
  "psycopg2-binary==2.9.7"
]

[tool.vercel]
entrypoint = "app_iot:app"
